deploy/dev/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crossbell-io
  namespace: crossbell
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: crossbell-io
      tier: api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: crossbell-io
        tier: api
    spec:
      containers:
        - image: $IMAGE_TAG_RELEASE
          imagePullPolicy: Always
          name: crossbell-io
          command:
            - npm
            - run
            - start
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: '100Mi'
              cpu: '100m'
            limits:
              memory: '800Mi'
              cpu: '200m'
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
